# xgov-beta-sc

./: .algokit.toml  .copier-answers.yml  .dockerignore  .env.fnet.template  .env.localnet.template  .env.mainnet.template  .env.testnet.template  .gitattributes  .gitignore  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  SECURITY.md  book.toml  docker-compose.yaml  my-feature-changes.patch  pyproject.toml  requirements.txt
.algokit/sources/: sources.avm.json
.algokit/sources/Proposal/: approval.teal  approval.teal.tok.map  clear.teal
.algokit/sources/XgovRegistry/: approval.teal  clear.teal  clear.teal.tok.map
.algokit/static-analysis/snapshots/: Proposal.approval.json  Proposal.clear.json  ProposalMock.approval.json  ProposalMock.clear.json  XGovSubscriberAppMock.approval.json  XGovSubscriberAppMock.clear.json  XgovRegistry.approval.json  XgovRegistry.clear.json  XgovRegistryMock.approval.json  XgovRegistryMock.clear.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  docs.md  enhancement-request.yaml  relation-type-request.yaml
.github/actions/algokit-setup/: action.yaml
.github/actions/docs-ci/: action.yaml
.github/actions/vault-oidc-connect/: action.yaml
.github/scripts/: committee-precheck.sh
.github/workflows/: auto-merge.yml  check-deployments.yaml  docs-cd.yaml  docs-ci.yaml  docs-pr.yaml.yml  lint-and-build.yml  xgov-beta-sc-cd.yaml  xgov-beta-sc-cd.yml  xgov-beta-sc-ci.yaml  xgov-beta-sc-ci.yml  xgov-beta-sc-configure-registry.yml  xgov-beta-sc-delete-test-deployment.yml  xgov-beta-sc-mainnet-release.yml  xgov-beta-sc-pause-resume.yml  xgov-beta-sc-publish-committee-mainnet.yml  xgov-beta-sc-publish-committee-testnet.yml  xgov-beta-sc-release-ci.yml  xgov-beta-sc-release.yml  xgov-beta-sc-set-roles.yml  xgov-beta-sc-watchdog-mainnet.yml  xgov-council-release.yml  xgov-latest-avm.yaml
docs/: BUG-BOUNTY.md  CONTRIBUTION-GUIDELINES.md  COVER.md  LICENSE.md  OVERVIEW.md  READING-GUIDELINES.md  SUMMARY.md
docs/.excalidraw/: architecture.excalidraw
docs/_excalidraw/: architecture.excalidraw  proposal-quorum.excalidraw  proposal-state-machine.excalidraw
docs/_include/: styles.md
docs/implementation/: ci-cd.md  configuration.md  deployment.md  events.md  integrations.md  numeric-precisions.md  testing.md
docs/specs/: proposal-creation.md  proposal-escrow.md  proposal-finalization.md  proposal-submission.md  proposal-vote.md  proposal.md  proposers.md  xgov-committee.md  xgov-rbac.md  xgov-registry.md  xgov-relation-types.md  xgov-treasury.md  xgovs.md
models/: account.py
smart_contracts/: __main__.py
smart_contracts/_helpers/: build.py  deploy.py  ipfs.py
smart_contracts/artifacts/council/: Council.approval.puya.map  Council.approval.teal  Council.approval.teal.nocomm  Council.arc32.json  Council.arc56.json  council_avm_client.py  council_client.py
smart_contracts/common/: abi_types.py  types.py
smart_contracts/council/: config.py  contract.py  deploy_config.py  enums.py
smart_contracts/errors/: std_errors.py
smart_contracts/helpers/: build.py
smart_contracts/interfaces/: proposal.py  xgov_registry.py
smart_contracts/proposal/: config.py  constants.py  contract.py  deploy_config.py  enums.py  types.py
smart_contracts/proposal_mock/: config.py  contract.py
smart_contracts/xgov_registry/: avm_types.py  committee_publish.py  config.py  constants.py  contract.py  deploy_config.py  enums.py  helpers.py  types.py  vault_tx_signer.py
smart_contracts/xgov_registry_mock/: config.py  contract.py  deploy_config.py
smart_contracts/xgov_subscriber_app_mock/: contract.py
tests/: common.py  conftest.py  test_account.py  utils.py
tests/council/: common.py  conftest.py  test_add_member.py  test_remove_member.py  test_update_council.py  test_vote.py
tests/proposal/: common.py  conftest.py  test_assign_voter.py  test_assign_voters.py  test_block.py  test_decommission.py  test_delete.py  test_deploy.py  test_drop.py  test_finalize.py  test_fund.py  test_get_state.py  test_get_voting_state.py  test_open.py  test_review.py  test_scrutiny.py  test_submit.py  test_unassign_absentees.py  test_unassign_voters.py  test_update.py  test_upload_metadata.py  test_vote.py
tests/xgov_registry/: common.py  conftest.py  test_activate_xgov.py  test_approve_subscribe_xgov.py  test_approve_unsubscribe_xgov.py  test_committee_publish.py  test_config_xgov_registry.py  test_declare_committee.py  test_decommission_proposal.py  test_deploy.py  test_deposit_funds.py  test_drop_proposal.py  test_finalize_proposal.py  test_get_available_funds.py  test_get_proposer_box.py  test_get_request_box.py  test_get_state.py  test_get_voter_box.py  test_get_xgov_box.py  test_open_proposal.py  test_paused_methods.py  test_pay_grant_proposal.py  test_reject_subscribe_xgov.py  test_reject_unsubscribe_xgov.py  test_request_resubscribe_xgov.py  test_request_subscribe_xgov.py  test_request_unsubscribe_xgov.py  test_set_committee_manager.py  test_set_committee_publisher.py  test_set_kyc_provider.py  test_set_payor.py  test_set_proposer_kyc.py  test_set_voting_account.py  test_set_xgov_council.py  test_set_xgov_daemon.py  test_set_xgov_manager.py  test_set_xgov_reviewer.py  test_set_xgov_subscriber.py  test_subscribe_proposer.py  test_subscribe_xgov.py  (+10 more)
theme/css/: general.css  variables.css
(+52 files in other folders)
