[tool.poetry]
package-mode = false
name = "xgov-beta-sc"
version = "2.0.0"
description = "Algorand xGov Beta Smart Contracts"
authors = ["Algorand Foundation <contact@algorand.foundation>"]
readme = "README.md"
homepage = "https://xgov.algorand.co/"
repository = "https://github.com/algorandfoundation/xgov-beta-sc"
documentation = "https://algorandfoundation.github.io/xgov-beta-sc/"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.2.2"
python-dotenv = "^1.2.1"
algorand-python = "==3.2.0"
poetry-core = "^2.2.1"
types-hvac = "^2.4.0.20251115"
hvac = "^2.4.0"
urllib3 = "^2.6.1"
pip = "^25.3"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.2.0"
black = {extras = ["d"], version = "^25.9.0"}
ruff = "^0.14.8"
mypy = "^1.19.0"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-sugar = "^1.1.1"
pip-audit = "^2.10.0"
pre-commit = "^4.5.0"
puyapy = "==5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
lint.unfixable = ["B", "RUF"]
lint.per-file-ignores = {"**/conftest.py" = ["F401", "F811"]}

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]

[tool.mypy]
files = "smart_contracts/"
python_version = "3.12"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
strict_concatenate = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
